--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "del": "^5.0.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^6.0.0",
+    "gulp-clean-css": "^4.3.0",
     "gulp-concat": "^2.6.1",
     "gulp-concat-css": "^3.1.0",
     "gulp-cssnano": "^2.1.3",
@@ -37,7 +38,7 @@
   },
   "dependencies": {
     "animate.css": "^3.6.1",
-    "bootstrap": "^4.3.1",
+    "bootstrap": "^4.4.1",
     "gulp-cssimport": "^7.0.0",
     "jquery": "^3.4.1",
     "normalize.css": "^8.0.1"
